# cs-cli

./: .env.example  .gitignore  AppIcon.icns  Cargo.toml  GITHUB_GIST_STORAGE_IMPROVEMENTS.md  README.md  build-pkg.sh  build-unified.sh  build.rs  build.sh  check_github_auth.sh  cli  create-icon.sh  customer-transcripts  install.sh  justfile  pyproject.toml  run_tests.sh  setup  setup.py  team-calls  temp_ascii.txt  test_cleanup.sh  test_fix.sh
.github/workflows/: codeql.yml  release.yml
launchd/: com.postman.cs-cli.updater.plist
pkg-scripts/: postinstall
prompting/: sammons-financial-research-report.md  sammons-prompt.md
prompts/default/: brief-analysis.md  solutions.md
scripts/: validate.sh
src/: launcher.rs  lib.rs  main.rs  terminal_launcher.rs  updater.rs
src/api/: client.rs  customer.rs  email.rs  library.rs  timeline.rs
src/auth/: authenticator.rs  cookies.rs  csrf.rs  mod.rs
src/cli/: args.rs  interactive.rs  mod.rs
src/common/: drivers.rs  mod.rs  self_update.rs
src/common/auth/: async_session_encryption.rs  browser_auth.rs  cdp_client.rs  cli_unlock.rs  cookie_extractor.rs  cookie_retriever.rs  gist_config_manager.rs  github_authenticator.rs  github_client_pool.rs  github_gist_errors.rs  github_gist_storage.rs  github_gist_storage_v2.rs  github_oauth_config.rs  github_oauth_flow.rs  guided_auth.rs  guided_auth_config.rs  guided_auth_test.rs  guided_cookie_storage.rs  hybrid_cookie_storage.rs  mod.rs  platform_authenticator.rs  profile_detector.rs  session_encryption.rs  session_manager.rs  session_metadata.rs  smart_keychain.rs  temp_profile_manager.rs
src/common/auth/auth_flow/: guided_auth.rs  guided_auth_config.rs  mod.rs
src/common/auth/browser/: cdp_browser_manager.rs  mod.rs  profile_detector.rs  temp_browser_manager.rs
src/common/auth/cookies/: cookie_retrieval_trait.rs  cookie_retriever.rs  guided_cookie_storage.rs  hybrid_cookie_storage.rs  mod.rs
src/common/auth/github/: gist_config_manager.rs  github_authenticator.rs  github_client_pool.rs  github_gist_errors.rs  github_gist_storage.rs  github_oauth_config.rs  github_oauth_flow.rs  mod.rs
src/common/auth/keychain/: mod.rs  smart_keychain.rs
src/common/auth/session/: async_session_encryption.rs  mod.rs  session_encryption.rs
src/common/auth/tests/: github_gist_storage_tests.rs  mod.rs
src/common/cli/: args.rs  full_interactive.rs  interactive.rs  mod.rs  multiselect.rs  theme.rs  tui_app.rs
src/common/config/: auth.rs  http.rs  loader.rs  mod.rs
src/common/env/: config_env.rs  env_utils.rs  mod.rs
src/common/error/: conversion.rs  mod.rs  types.rs
src/common/file_io/: directory.rs  file_ops.rs  mod.rs  path_utils.rs
src/common/http/: browser_client.rs  client.rs  error_helpers.rs  mod.rs  platform_client_builder.rs  pool.rs  rate_limiting.rs
src/common/logging/: file_utils.rs  init.rs  mod.rs
src/common/models/: communication.rs  mod.rs  time.rs
src/common/output/: markdown_generator.rs  mod.rs
src/common/retry/: backoff.rs  mod.rs  retry_config.rs  retry_executor.rs
src/config/: settings.rs
src/error/: types.rs
src/gainsight/auth/: gainsight_auth.rs  mod.rs
src/gainsight/reference/: cs-cli-rust.code-workspace  gainsight-api-endpoints.md  gs-workflows.md  guide.md
src/gong/: extractor.rs  mod.rs  retriever.rs
src/gong/api/: client.rs  customer.rs  email.rs  library.rs  mod.rs  timeline.rs
src/gong/auth/: authentication_flow.rs  authenticator.rs  cookies.rs  csrf.rs  mod.rs
src/gong/cli/: args.rs  interactive.rs  mod.rs  tui_runner.rs
src/gong/config/: settings.rs
src/gong/error/: mod.rs
src/gong/models/: call.rs  common.rs  email.rs  mod.rs
src/gong/output/: html_test.rs  markdown.rs  mod.rs
src/models/: common.rs  communication.rs  mod.rs
src/output/: html.rs  markdown.rs
src/slack/: explorer.rs  mod.rs  test.rs
src/slack/api/: mod.rs  slack_client.rs
src/slack/auth/: mod.rs  slack_auth.rs
src/slack/models/: mod.rs
src/slack/todo/: slacktodo.md
team_calls/: __init__.py  __main__.py  cli.py  models.py
team_calls/api/: __init__.py  customer_search.py  email_enhancer.py  library_client.py  timeline_extractor.py
team_calls/formatters/: __init__.py  html_processor.py  markdown.py
team_calls/infra/: __init__.py  auth.py  config.py  http.py
tests/: README.md  api_integration.rs  auth_integration.rs  cdp_cleanup_test.rs  driver_cleanup_test.rs  e2e_regression.rs  edge_cases.rs  github_gist_integration_tests.rs  github_oauth_unit_tests.rs  guided_auth_integration.rs  performance_test.rs  profile_detector_tests.rs  run_tests.sh  session_encryption_tests.rs
tests/common/: mod.rs
updates/: beta.json  stable.json
