[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "customer-transcripts-cli"
version = "1.0.0"
description = "Extract customer calls from Gong and save as markdown transcripts"
readme = "README.md"
authors = [
    {name = "Customer Success Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "structlog>=23.1.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "browser-cookie3>=0.20.0",
    "pydantic>=2.0.0",
    "curl-cffi>=0.5.0",
    "lxml>=4.9.0",
]

[project.scripts]
customer-transcripts = "team_calls.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["team_calls"]
